add resume via iframe

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^12.23.12",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-pdf": "^10.0.1",
     "react-router-dom": "^7.7.1",
     "styled-components": "^6.1.19"
   },
